# butterfly-agent

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  chat.py  cli_bugs.md  design.md  problems.md  pyproject.toml  track.md  webui_bugs.md
butterfly/core/: agent.py  guardian.py
butterfly/runtime/: ipc.py  server.py
butterfly/service/: history_service.py  hud_service.py  sessions_service.py
butterfly/session_engine/: entity_state.py  panel.py  session.py  session_config.py  session_init.py
butterfly/tool_engine/: background.py  loader.py  sub_agent.py
cli_app/: README.md
cli_app/qjbq/: server.py
docs/: daily-review-latest.md  usage-log.md
docs/butterfly/: todo.md
entity/: README.md
examples/: 01_basic_agent.py  02_custom_tools.py  03_multi_agent.py  04_tmp_subagent.py  05_entity_agent.py  06_heartbeat_agent.py  07_daemon_instance.py
nutshell/: README.md  __init__.py  agent.py  provider.py  skill.py  tool.py
tests/: README.md  conftest.py  test_agent.py  test_agent_loader_inheritance.py  test_app_notify.py  test_bash_tool.py  test_cli_keepalive.py  test_cli_main.py  test_entity_catalog.py  test_entity_receptionist.py  test_entity_update.py  test_git_checkpoint.py  test_harness.py  test_ipc.py  test_layout.py  test_model_eval.py  test_new_agent.py  test_openai_provider.py  test_persistent_agent.py  test_prompt_cache.py  test_qjbq_server.py  test_reload_tool.py  test_sandbox.py  test_send_to_session.py  test_session_capabilities.py  test_spawn_session.py  test_state_diff.py  test_text_chunk_flush.py  test_tools.py  test_watcher.py
ui/: README.md  tui.py
(+320 files in other folders)
