[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutshell"
version = "0.1.0"
description = "A minimal Python Agent library"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
